--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "pg": "^8.14.1",
-    "pug": "^2.0.3"
+    "pg-hstore": "^2.3.4",
+    "pug": "^2.0.3",
+    "sequelize": "^6.37.6"
   }
 }
